[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
polars = { version = "0.30", features = ["ipc", "lazy"] }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
retry = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
